<resources>
    <string name="app_name">医疗废弃物管理平台</string>

    <string name="input_phone_number">请输入手机号码</string>
    <string name="input_message_code">请输入验证码</string>
    <string name="login">登录</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="get_verify_code_failed">获取验证码失败，请稍后重试</string>
    <string name="phone_valid_error">请输入正确的手机号码</string>
    <string name="resend">重新获取</string>
    <string name="resendable_after_seconds">%s秒</string>
    <string name="vertifycode_valid_error">请输入正确的验证码</string>
    <string name="server_error">服务器异常</string>
    <string name="loading">加载中...</string>
    <string name="url_empty_error">Webview url is empty</string>
    <string name="scan_qr">条形码</string>
    <string name="permission_camera_denied">需要相机权限才能扫描条码</string>
    <string name="scan_again">扫描失败，请重试</string>
    <string name="ambientBrightnessTip">环境过暗，请打开闪光灯</string>
    <string name="scan_success">扫码成功</string>
    <string name="scan_hint">将采集管上的条形码放入框内，即可自动扫描</string>
    <string name="input_bind">手动绑定</string>
    <string name="input_code_title">试试手动输入吧</string>
    <string name="input_code_hint">请输入14位检测码</string>
    <string name="input_code_error">请输入正确的检测码</string>
    <string name="confirm">确定</string>
    <string name="upload">上传垃圾</string>
    <string name="storage">垃圾入库</string>
    <string name="deposit">垃圾出库</string>
    <string name="history">历史垃圾</string>
    <string name="traceback">垃圾追溯</string>
    <string name="logout">退出登录</string>
    <string name="department_info">科室信息</string>
    <string name="rubbish_type">垃圾分类</string>
    <string name="next">下一步</string>
    <string name="bluetooth_linked">(蓝牙已连接)</string>
    <string name="bluetooth_unlinked">(蓝牙未连接)</string>
    <string name="weight_hint">称重</string>
    <string name="rubbish_weight">垃圾重量</string>
    <string name="last">上一步</string>
    <string name="add_rubbish">添加垃圾</string>
    <string name="empty_department">请先扫描科室再添加</string>
    <string name="print_tag">打印标签</string>
    <string name="continue_add">继续添加</string>
    <string name="medical_waste">医疗废物</string>
    <string name="print_content">时间：%1$s\n类型：%2$s\n重量：%3$s\n科室：%4$s\n医院：%5$s</string>
    <string name="print_history_content">时间：%1$s\n类型：%2$s\n重量：%3$s\n科室：%4$s\n医院：%5$s\n状态：%6$s</string>
    <string name="rubbish_record_content">ID：%1$s\n科室：%2$s\n类型：%3$s\n重量：%4$s\n状态：%5$s</string>
    <string name="hospital_medical_waste">院内医废</string>
    <string name="total">合计：%d袋</string>
    <string name="nurse_confirm">护士确认</string>
    <string name="back_home">返回首页</string>
    <string name="ol">超重</string>
    <string name="un">称重不稳定</string>
    <string name="no_rubbish">垃圾还没有称重</string>
    <string name="default_hospital">南京军区医院</string>
    <string name="finish_upload">上传完成</string>
    <string name="activity_in">垃圾入库</string>
    <string name="activity_out">垃圾出库</string>
    <string name="bag_count">%d袋</string>
    <string name="weight">%skg</string>
    <string name="confirm_in">确认入库</string>
    <string name="finish">完成</string>
    <string name="total_bag_count">共计 %d袋</string>
    <string name="total_weight">总重量 %skg</string>
    <string name="in_success">垃圾入库成功</string>
    <string name="out_success">垃圾出库成功</string>
    <string name="confirm_out">确认出库</string>
    <string name="history_record">历史记录</string>
    <string name="record_choose">记录筛选</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="input_start_time">请选择开始时间</string>
    <string name="input_start_date">请选择开始日期</string>
    <string name="input_end_time">请选择结束时间</string>
    <string name="input_end_date">请选择结束日期</string>
    <string name="empty">暂无数据</string>
    <string name="nfc_error">刷卡失败，请重试</string>
    <string name="rubbish_record_hint">输入id查询</string>
    <string name="rubbish_record_hint1">按SCAN键扫描或输入id查询</string>
    <string name="show_detail">查\n询\n详\n情</string>
    <string name="rubbish_record">垃圾追溯</string>
    <string name="input_id">请输入id</string>
    <string name="scan_error">扫码失败，请重试</string>
    <string name="basic_info">ID：%1$s\n科室：%2$s\n类型：%3$s\n重量：%4$s\n状态：%5$s</string>
    <string name="other_info">操作人：%1$s\n确认人：%2$s\n操作时间：%3$s</string>
    <string name="rubbish_detail">垃圾详情</string>
    <string name="close">关闭</string>
    <string name="error_card">卡号不对</string>
    <string name="no_hospital">未能查询到医院信息</string>
    <string name="error_qrcode">操作频繁，请稍后重试</string>
    <string name="error_scan">扫码出错，请稍后重扫</string>
    <string name="in_print_content">总包数：%1$s\n总重量：%2$skg\n医院：%3$s</string>
</resources>
