<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_base_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="69dp"
            android:drawableTop="@mipmap/icon_medical_waste"
            android:gravity="center_horizontal"
            android:drawablePadding="20dp"
            android:text="@string/medical_waste"
            android:textColor="@color/color_333333"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/print_content"
            android:textColor="@color/color_333333"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="69dp"
            android:text="@string/hospital_medical_waste"
            android:textColor="@color/color_999999"
            android:textSize="12sp" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/last"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/divider"
            android:text="@string/continue_add"
            android:textColor="@color/color_333333"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/print_tag"
            android:textColor="@color/material_white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>