<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_status_view" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_default_height"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="添加"
                android:textColor="@color/material_white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bluetooth_linked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/bluetooth_linked"
                android:textColor="@color/material_white"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/btn_default_height"
            android:layout_height="@dimen/btn_default_height"
            android:padding="10dp"
            android:src="@mipmap/ic_back_btn_white"
            android:visibility="gone" />
    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="55dp">

            <TextView
                android:id="@+id/department_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:drawableEnd="@mipmap/icon_triangle_right"
                android:drawablePadding="10dp"
                android:text="@string/department_info"
                android:textColor="@color/text_color6"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/department_title"
                android:text="耳鼻咽喉科"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/department_title"
                android:layout_alignStart="@+id/department_title"
                android:layout_alignEnd="@+id/department"
                android:background="@color/divider" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:drawableStart="@mipmap/icon_rubbish_type"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/rubbish_type"
            android:textColor="@color/color_666666" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:drawableStart="@mipmap/icon_rubbish_weight"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/rubbish_weight"
            android:textColor="@color/color_666666" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/type_bg"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:hint="@string/weight_hint"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_999999" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/last"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/divider"
            android:text="@string/last"
            android:textColor="@color/color_333333"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textColor="@color/material_white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>