<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_base_title" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0pt"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55pt">

            <TextView
                android:id="@+id/department_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5pt"
                android:drawableEnd="@mipmap/icon_triangle_right"
                android:drawablePadding="10pt"
                android:text="@string/department_info"
                android:textColor="@color/text_color6"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10pt"
                android:layout_toEndOf="@+id/department_title"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1pt"
                android:layout_below="@+id/department_title"
                android:layout_alignStart="@+id/department_title"
                android:layout_alignEnd="@+id/department"
                android:background="@color/divider" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40pt"
            android:layout_marginTop="40pt"
            android:layout_marginRight="40pt"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/continue_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50pt"
            android:drawableTop="@mipmap/icon_add"
            android:drawablePadding="20pt"
            android:gravity="center_horizontal"
            android:text="@string/continue_add"
            android:textColor="@color/color_333333"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30pt"
            android:layout_marginBottom="20pt"
            android:text="@string/total"
            android:textColor="@color/color_999999"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="52pt">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/last"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/divider"
            android:text="@string/last"
            android:textColor="@color/color_333333"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/nurse_confirm"
            android:textColor="@color/material_white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>