<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_base_title" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/department_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="出库垃圾统计"
            android:layout_marginTop="40dp"
            android:textColor="@color/text_color6"
            android:textSize="14sp" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="60dp"
            android:layout_height="50dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bag_count"
                android:layout_width="0px"
                android:background="@drawable/green_btn"
                android:layout_weight="1"
                android:textColor="@color/material_white"
                android:textSize="15sp"
                android:text="@string/total_bag_count"
                android:layout_height="match_parent" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/weight"
                android:layout_width="0px"
                android:background="@drawable/gray_btn"
                android:layout_weight="1"
                android:textColor="@color/material_white"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:text="@string/total_weight"
                android:layout_height="match_parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/last"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/divider"
            android:text="@string/last"
            android:textColor="@color/color_333333"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/finish"
            android:textColor="@color/material_white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>