<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30pt"
        android:layout_marginEnd="30pt"
        android:background="@color/material_white"
        app:cardCornerRadius="@dimen/dp10"
        app:cardElevation="0px">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60pt">

                <LinearLayout
                    android:id="@+id/tab_time"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/tab_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="按时间"
                        android:textColor="@drawable/tab_textcolor"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2pt"
                        android:gravity="center"
                        android:text="(显示近一天)"
                        android:textColor="@drawable/tab_textcolor"
                        android:textSize="10sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/tab_date"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/tab_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="按日期"
                        android:textColor="@drawable/tab_textcolor"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2pt"
                        android:gravity="center"
                        android:text="(显示近一个月)"
                        android:textColor="@drawable/tab_textcolor"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60pt">

                <TextView
                    android:id="@+id/start"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/start_date"
                    android:textColor="@color/color_666666"
                    android:textColorHint="@color/color_666666"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0.5pt"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/end"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/end_date"
                    android:textColor="@color/color_666666"
                    android:textColorHint="@color/color_666666"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="50pt"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/material_white"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>